@@ -1,6 +1,6 @@
 Package: TraMineRextras
 Version: 0.3.3
-Date: 2013-10-30
+Date: 2014-09-15
 Title: Extras for use with the TraMineR package
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
