@@ -1,0 +1,29 @@
+citHeader("To cite TraMineRextras in publications please use:")
+
+p1 <- person("Alexis", "Gabadinho", email = "alexis.gabadinho@unige.ch")
+p2 <- person("Gilbert", "Ritschard", email = "gilbert.ritschard@unige.ch")
+p3 <- person("Matthias", "Studer", email = "matthias.studer@unige.ch")
+p4 <- person("Nicolas S.", "M\u00FCller", email = "nsmuller@gmail.com")
+p5 <- person("Reto", "B\u00FCrgin", email = "reto.buergin@unige.ch")
+
+citEntry(entry="article",
+  author = personList(p4, p3, p2, p1),
+  title = "Extraction de r\u00E8gles d'association s\u00E9quentielle \u00E0 l'aide de mod\u00E8les semi-param\u00E9triques \u00E0 risques proportionnels",
+  journal = "Revue des nouvelles technologies de l'information (RNTI)",
+  year = "2010",
+  volume = "E-19",
+  pages = "25-36",
+  booktitle = "Extraction et gestion des connaissances (EGC 2010)",
+  textVersion="M\u00FCller, N.S., Studer, M., Gabadinho, A. & Ritschard, G. (2010), Extraction de r\u00E8gles d'association s\u00E9quentielle \u00E0 l'aide de mod\u00E8les semi-param\u00E9triques \u00E0 risques proportionnels, In Extraction et gestion des connaissances (EGC 2010), Revue des nouvelles technologies de l'information RNTI. Vol. E-19, pp. 25-36. ",
+  header="For event sequences:"
+)
+citEntry(entry="article",
+  author = personList(p3, p4, p2, p1),
+  title = "Classer, discriminer et visualiser des s\u00E9quences d'\u00E9v\u00E9nements",
+  journal = "Revue des nouvelles technologies de l'information (RNTI)",
+  year = "2010",
+  volume = "E-19",
+  pages = "37-48",
+  textVersion="Studer, M., M\u00FCller, N.S., Ritschard, G. & Gabadinho, A. (2010), Classer, discriminer et visualiser des s\u00E9quences d'\u00E9v\u00E9nements, In Extraction et gestion des connaissances (EGC 2010), Revue des nouvelles technologies de l'information RNTI. Vol. E-19, pp. 37-48. ",
+  booktitle = "Extraction et gestion des connaissances (EGC 2010)"
+)
